[tool.poetry]
name = "kivy_paint"
version = "0.1.0.dev0"
description = ""
authors = ["Nattōsai Mitō <flow4re2c@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
kivy = {url = "https://github.com/kivy/kivy/archive/master.zip"}
asynckivy = "~0.5"
kivymd = {url = "https://github.com/gottadiveintopython/KivyMD-Icon/archive/main.zip"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
